# podcraft

./: .cirrus.yml  README.md  pyproject.toml
.ci/: upload.xsh
podcraft/: __main__.py  building.py  cli.py  config.py  containers.py  images.py  mainobj.py  namegen.py  poddir.py  podman.py  pods.py  state.py
tests/: test_podcraft.py
