[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "podcraft"
version = "0.0.1"
description = "Minecraft server manager, using podman"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]

[tool.poetry.scripts]
podcraft = 'podcraft.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
podman = "^1.6.0"
toml = "^0.10.0"
requests = "^2.22.0"
cached-property = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
